# baldwin-function

./: .gitignore  CHANGELOG.md  README.md  baldwin-function.code-workspace  email_service.py  function_app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: Azure_function_codegen_and_deployment.agent.md
BaldwinEmail/: __init__.py  email_service.py  postgres_store.py  vectorization.py
baldwin/: __init__.py  exceptions.py  http_handlers.py
baldwin/email/: __init__.py  email_service.py  postgres_store.py  vectorization.py
baldwin/embedding/: __init__.py  providers.py
baldwin/things/: __init__.py  client.py  models.py  postgres_store.py
baldwin/vector/: __init__.py  postgres_store.py
docs/: Baldwin_Function.postman_collection.json  EMAIL_VECTORIZATION.md  SCAN_MAIL.md  THINGS.md
scripts/: __init__.py  things_snapshot.py  vectorize_inbox.py  vectorize_mailbox.py
sql/: message_flags_keywords_detail.sql  message_flags_keywords_summary.sql  message_flags_keywords_summary_filtered.sql  message_system_flags_summary.sql
tests/: test_email_service.py  test_email_sync_state.py  test_embedding_providers.py  test_function_app.py  test_things.py  test_things_snapshot.py  test_things_store.py  test_vector_store.py  test_vectorization.py  test_vectorize_inbox.py
